Archive2/b3/22bf49f6460a18/output
main.cpp:4:55: error: 'vector' in namespace 'std' does not name a template type
 std::ostream& operator<<(std::ostream& os, const std::vector<T>& vec)
                                                       ^
main.cpp:4:61: error: expected ',' or '...' before '<' token
 std::ostream& operator<<(std::ostream& os, const std::vector<T>& vec)
                                                             ^
main.cpp: In function 'std::ostream& operator<<(std::ostream&, int)':
main.cpp:6:21: error: 'vec' was not declared in this scope
     for (auto& el : vec)
                     ^
main.cpp: In function 'int main()':
main.cpp:15:5: error: 'vector' is not a member of 'std'
     std::vector<std::string> words = {
     ^
main.cpp:15:28: error: expected primary-expression before '>' token
     std::vector<std::string> words = {
                            ^
main.cpp:15:30: error: 'words' was not declared in this scope
     std::vector<std::string> words = {
                              ^
